modified data path

--- a/EPM/Prep-epm.ipynb
+++ b/EPM/Prep-epm.ipynb
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('EPM.csv').drop('Unnamed: 0', axis=1)\n",
+    "df = pd.read_csv('data/EPM.csv').drop('Unnamed: 0', axis=1)\n",
     "df"
    ]
   },
