--- a/EPM/TAIWI-epm.ipynb
+++ b/EPM/TAIWI-epm.ipynb
@@ -64,11 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "8K05RukocbKc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/adhi/nbr-time_aware_item_weighting/.env-nbr/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -123,7 +132,7 @@
     "corpus_path = \"notebooks/data/\"\n",
     "dataset_name = \"ta_feng\"\n",
     "\n",
-    "corpus_path = \"../\"\n",
+    "corpus_path = \"data/\"\n",
     "dataset_name = \"EPM-prep\"\n",
     "\n",
     "preprocessor = Preprocess(corpus_path, dataset_name)\n",
@@ -815,13 +824,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('../EPM.csv')"
+    "data = pd.read_csv('data/EPM.csv')"
    ]
   },
   {
@@ -935,7 +944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
