Update EPM resources

--- a/EPM/Prep-epm.ipynb
+++ b/EPM/Prep-epm.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from datetime import datetime"
+    "from datetime import datetime, timezone"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[518655 rows x 10 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>customer_name</th>\n",
+       "      <th>ship_to_id</th>\n",
        "      <th>item_code</th>\n",
        "      <th>trx_date</th>\n",
        "    </tr>\n",
@@ -299,31 +299,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>JK1-AP. DEVITA_GROUP_NA</td>\n",
+       "      <td>EPM_34950</td>\n",
        "      <td>KCFMB</td>\n",
        "      <td>2021-08-20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>JK1-AP. DEVITA_GROUP_NA</td>\n",
+       "      <td>EPM_34950</td>\n",
        "      <td>CKCOA</td>\n",
        "      <td>2021-11-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>JK1-AP. DEVITA_GROUP_NA</td>\n",
+       "      <td>EPM_34950</td>\n",
        "      <td>TMFNB</td>\n",
        "      <td>2021-11-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>JK1-AP. DEVITA_GROUP_NA</td>\n",
+       "      <td>EPM_34950</td>\n",
        "      <td>TBSVC</td>\n",
        "      <td>2021-11-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>JK1-AP. DEVITA_GROUP_NA</td>\n",
+       "      <td>EPM_34950</td>\n",
        "      <td>TALNF</td>\n",
        "      <td>2021-08-20</td>\n",
        "    </tr>\n",
@@ -335,31 +335,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518650</th>\n",
-       "      <td>JK1-AP. INDAH SEHAT_GROUP_NA</td>\n",
+       "      <td>EPM_4554507</td>\n",
        "      <td>BLCVS</td>\n",
        "      <td>2023-09-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518651</th>\n",
-       "      <td>JK1-AP. INDAH SEHAT_GROUP_NA</td>\n",
+       "      <td>EPM_4554507</td>\n",
        "      <td>BLCVC</td>\n",
        "      <td>2023-09-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518652</th>\n",
-       "      <td>JK1-AP. INDAH SEHAT_GROUP_NA</td>\n",
+       "      <td>EPM_4554507</td>\n",
        "      <td>BLCOF</td>\n",
        "      <td>2023-09-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518653</th>\n",
-       "      <td>JK1-AP. INDAH SEHAT_GROUP_NA</td>\n",
+       "      <td>EPM_4554507</td>\n",
        "      <td>BLCMV</td>\n",
        "      <td>2023-09-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518654</th>\n",
-       "      <td>JK1-AP. INDAH SEHAT_GROUP_NA</td>\n",
+       "      <td>EPM_4554507</td>\n",
        "      <td>BLCBI</td>\n",
        "      <td>2023-09-30</td>\n",
        "    </tr>\n",
@@ -369,29 +369,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                       customer_name item_code    trx_date\n",
-       "0            JK1-AP. DEVITA_GROUP_NA     KCFMB  2021-08-20\n",
-       "1            JK1-AP. DEVITA_GROUP_NA     CKCOA  2021-11-02\n",
-       "2            JK1-AP. DEVITA_GROUP_NA     TMFNB  2021-11-02\n",
-       "3            JK1-AP. DEVITA_GROUP_NA     TBSVC  2021-11-02\n",
-       "4            JK1-AP. DEVITA_GROUP_NA     TALNF  2021-08-20\n",
-       "...                              ...       ...         ...\n",
-       "518650  JK1-AP. INDAH SEHAT_GROUP_NA     BLCVS  2023-09-30\n",
-       "518651  JK1-AP. INDAH SEHAT_GROUP_NA     BLCVC  2023-09-30\n",
-       "518652  JK1-AP. INDAH SEHAT_GROUP_NA     BLCOF  2023-09-30\n",
-       "518653  JK1-AP. INDAH SEHAT_GROUP_NA     BLCMV  2023-09-30\n",
-       "518654  JK1-AP. INDAH SEHAT_GROUP_NA     BLCBI  2023-09-30\n",
+       "         ship_to_id item_code    trx_date\n",
+       "0         EPM_34950     KCFMB  2021-08-20\n",
+       "1         EPM_34950     CKCOA  2021-11-02\n",
+       "2         EPM_34950     TMFNB  2021-11-02\n",
+       "3         EPM_34950     TBSVC  2021-11-02\n",
+       "4         EPM_34950     TALNF  2021-08-20\n",
+       "...             ...       ...         ...\n",
+       "518650  EPM_4554507     BLCVS  2023-09-30\n",
+       "518651  EPM_4554507     BLCVC  2023-09-30\n",
+       "518652  EPM_4554507     BLCOF  2023-09-30\n",
+       "518653  EPM_4554507     BLCMV  2023-09-30\n",
+       "518654  EPM_4554507     BLCBI  2023-09-30\n",
        "\n",
        "[518655 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = df[['customer_name', 'item_code', 'trx_date']]\n",
+    "df2 = df[['ship_to_id', 'item_code', 'trx_date']]\n",
     "df2"
    ]
   },
@@ -448,52 +448,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Fadli\\AppData\\Local\\Temp\\ipykernel_12600\\2306116472.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Fadli\\AppData\\Local\\Temp\\ipykernel_4492\\1562972488.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df2['trx_date'] = df['trx_date'].apply(lambda x: int(datetime.strptime(x, \"%Y-%m-%d\").timestamp()))\n"
+      "  df2['trx_date'] = df['trx_date'].apply(lambda x: int(datetime.strptime(x, \"%Y-%m-%d\").replace(tzinfo=timezone.utc).timestamp()))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0         1629392400\n",
-       "1         1635786000\n",
-       "2         1635786000\n",
-       "3         1635786000\n",
-       "4         1629392400\n",
+       "0         1629417600\n",
+       "1         1635811200\n",
+       "2         1635811200\n",
+       "3         1635811200\n",
+       "4         1629417600\n",
        "             ...    \n",
-       "518650    1696006800\n",
-       "518651    1696006800\n",
-       "518652    1696006800\n",
-       "518653    1696006800\n",
-       "518654    1696006800\n",
+       "518650    1696032000\n",
+       "518651    1696032000\n",
+       "518652    1696032000\n",
+       "518653    1696032000\n",
+       "518654    1696032000\n",
        "Name: trx_date, Length: 518655, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2['trx_date'] = df['trx_date'].apply(lambda x: int(datetime.strptime(x, \"%Y-%m-%d\").timestamp()))\n",
+    "df2['trx_date'] = df['trx_date'].apply(lambda x: int(datetime.strptime(x, \"%Y-%m-%d\").replace(tzinfo=timezone.utc).timestamp()))\n",
     "df2['trx_date']\n",
     "# df2['trx_date']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>customer_name</th>\n",
+       "      <th>ship_to_id</th>\n",
        "      <th>item_code</th>\n",
        "      <th>trx_date</th>\n",
        "    </tr>\n",
@@ -525,33 +525,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>114</td>\n",
+       "      <td>190</td>\n",
        "      <td>421</td>\n",
-       "      <td>1629392400</td>\n",
+       "      <td>1629417600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>114</td>\n",
+       "      <td>190</td>\n",
        "      <td>176</td>\n",
-       "      <td>1635786000</td>\n",
+       "      <td>1635811200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>114</td>\n",
+       "      <td>190</td>\n",
        "      <td>1178</td>\n",
-       "      <td>1635786000</td>\n",
+       "      <td>1635811200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>114</td>\n",
+       "      <td>190</td>\n",
        "      <td>998</td>\n",
-       "      <td>1635786000</td>\n",
+       "      <td>1635811200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>114</td>\n",
+       "      <td>190</td>\n",
        "      <td>974</td>\n",
-       "      <td>1629392400</td>\n",
+       "      <td>1629417600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -561,33 +561,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518650</th>\n",
-       "      <td>156</td>\n",
+       "      <td>558</td>\n",
        "      <td>128</td>\n",
-       "      <td>1696006800</td>\n",
+       "      <td>1696032000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518651</th>\n",
-       "      <td>156</td>\n",
+       "      <td>558</td>\n",
        "      <td>125</td>\n",
-       "      <td>1696006800</td>\n",
+       "      <td>1696032000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518652</th>\n",
-       "      <td>156</td>\n",
+       "      <td>558</td>\n",
        "      <td>115</td>\n",
-       "      <td>1696006800</td>\n",
+       "      <td>1696032000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518653</th>\n",
-       "      <td>156</td>\n",
+       "      <td>558</td>\n",
        "      <td>110</td>\n",
-       "      <td>1696006800</td>\n",
+       "      <td>1696032000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518654</th>\n",
-       "      <td>156</td>\n",
+       "      <td>558</td>\n",
        "      <td>75</td>\n",
-       "      <td>1696006800</td>\n",
+       "      <td>1696032000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -595,29 +595,29 @@
        "</div>"
       ],
       "text/plain": [
-       "        customer_name  item_code    trx_date\n",
-       "0                 114        421  1629392400\n",
-       "1                 114        176  1635786000\n",
-       "2                 114       1178  1635786000\n",
-       "3                 114        998  1635786000\n",
-       "4                 114        974  1629392400\n",
-       "...               ...        ...         ...\n",
-       "518650            156        128  1696006800\n",
-       "518651            156        125  1696006800\n",
-       "518652            156        115  1696006800\n",
-       "518653            156        110  1696006800\n",
-       "518654            156         75  1696006800\n",
+       "        ship_to_id  item_code    trx_date\n",
+       "0              190        421  1629417600\n",
+       "1              190        176  1635811200\n",
+       "2              190       1178  1635811200\n",
+       "3              190        998  1635811200\n",
+       "4              190        974  1629417600\n",
+       "...            ...        ...         ...\n",
+       "518650         558        128  1696032000\n",
+       "518651         558        125  1696032000\n",
+       "518652         558        115  1696032000\n",
+       "518653         558        110  1696032000\n",
+       "518654         558         75  1696032000\n",
        "\n",
        "[518655 rows x 3 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_id = pd.DataFrame({col: df2[col].astype('category').cat.codes for col in ['customer_name', 'item_code']}, index=df2.index)\n",
+    "df_id = pd.DataFrame({col: df2[col].astype('category').cat.codes for col in ['ship_to_id', 'item_code']}, index=df2.index)\n",
     "\n",
     "df22 = pd.concat([df_id, df2[['trx_date']]], axis=1)\n",
     "df22"
@@ -625,11 +625,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df22.to_csv('EPM-prep.txt', sep='\\t', index=False, header=False)"
+    "df22.to_csv('data/EPM-prep.txt', sep='\\t', index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data/EPM-prep.txt', sep='\\t', header=None)\n",
+    "df.sort_values([0, 2]).to_csv('data/EPM-prep.txt', sep='\\t', index=False, header=False)"
    ]
   }
  ],
